--- a/assignment 20 a.ipynb
+++ b/assignment 20 a.ipynb
@@ -9,7 +9,7 @@
     {
      "data": {
       "text/plain": [
-       "\"Q1. The key features of the wine quality dataset include fixed acidity, volatile acidity, citric acid, residual sugar, chlorides, free sulfur dioxide, total sulfur dioxide, density, pH, sulphates, alcohol, and quality. Each feature plays a role in determining the wine's chemical composition and sensory attributes. For example, alcohol and sulphates can significantly affect taste and preservation, while acidity impacts the overall balance. Understanding these features helps in predicting the wine's quality based on its chemical properties.\\n\""
+       "\"The key features of the wine quality dataset include fixed acidity, volatile acidity, citric acid, residual sugar, chlorides, free sulfur dioxide,\\ntotal sulfur dioxide, density, pH, sulphates, alcohol, and quality. Each feature plays a role in determining the wine's chemical composition and sensory\\nattributes. For example, alcohol and sulphates can significantly affect taste and preservation, while acidity impacts the overall balance. Understanding\\nthese features helps in predicting the wine's quality based on its chemical properties.\\n\""
       ]
      },
      "execution_count": 1,
@@ -18,7 +18,11 @@
     }
    ],
    "source": [
-    "'''Q1. The key features of the wine quality dataset include fixed acidity, volatile acidity, citric acid, residual sugar, chlorides, free sulfur dioxide, total sulfur dioxide, density, pH, sulphates, alcohol, and quality. Each feature plays a role in determining the wine's chemical composition and sensory attributes. For example, alcohol and sulphates can significantly affect taste and preservation, while acidity impacts the overall balance. Understanding these features helps in predicting the wine's quality based on its chemical properties.\n",
+    "#Q1\n",
+    "'''The key features of the wine quality dataset include fixed acidity, volatile acidity, citric acid, residual sugar, chlorides, free sulfur dioxide,\n",
+    "total sulfur dioxide, density, pH, sulphates, alcohol, and quality. Each feature plays a role in determining the wine's chemical composition and sensory\n",
+    "attributes. For example, alcohol and sulphates can significantly affect taste and preservation, while acidity impacts the overall balance. Understanding\n",
+    "these features helps in predicting the wine's quality based on its chemical properties.\n",
     "'''"
    ]
   },
@@ -31,7 +35,7 @@
     {
      "data": {
       "text/plain": [
-       "'\\nQ2. Handling missing data in the wine quality dataset can involve techniques like mean, median, or mode imputation, K-nearest neighbors (KNN), or using algorithms that support missing values. Mean imputation is simple but can distort variance. KNN considers correlations but is computationally expensive. Advanced methods like Multiple Imputation by Chained Equations (MICE) can provide more accurate results but require more resources and complexity.\\n\\n'"
+       "'Handling missing data in the wine quality dataset can involve techniques like mean, median, or mode imputation, K-nearest neighbors (KNN), or using\\nalgorithms that support missing values. Mean imputation is simple but can distort variance. KNN considers correlations but is computationally expensive.\\nAdvanced methods like Multiple Imputation by Chained Equations (MICE) can provide more accurate results but require more resources and complexity.\\n\\n'"
       ]
      },
      "execution_count": 2,
@@ -40,8 +44,10 @@
     }
    ],
    "source": [
-    "'''\n",
-    "Q2. Handling missing data in the wine quality dataset can involve techniques like mean, median, or mode imputation, K-nearest neighbors (KNN), or using algorithms that support missing values. Mean imputation is simple but can distort variance. KNN considers correlations but is computationally expensive. Advanced methods like Multiple Imputation by Chained Equations (MICE) can provide more accurate results but require more resources and complexity.\n",
+    "#Q2\n",
+    "'''Handling missing data in the wine quality dataset can involve techniques like mean, median, or mode imputation, K-nearest neighbors (KNN), or using\n",
+    "algorithms that support missing values. Mean imputation is simple but can distort variance. KNN considers correlations but is computationally expensive.\n",
+    "Advanced methods like Multiple Imputation by Chained Equations (MICE) can provide more accurate results but require more resources and complexity.\n",
     "\n",
     "'''"
    ]
@@ -55,7 +61,7 @@
     {
      "data": {
       "text/plain": [
-       "\"Q3. Key factors affecting students' performance in exams include socioeconomic status, parental education, study habits, attendance, and psychological well-being. Analyzing these factors involves statistical techniques like regression analysis, correlation studies, and hypothesis testing. Identifying patterns and relationships can help in understanding and improving educational outcomes by targeting influential factors.\\n\\n\""
+       "\"Key factors affecting students' performance in exams include socioeconomic status, parental education, study habits, attendance, and psychological \\nwell-being. Analyzing these factors involves statistical techniques like regression analysis, correlation studies, and hypothesis testing. Identifying \\npatterns and relationships can help in understanding and improving educational outcomes by targeting influential factors.\\n\\n\""
       ]
      },
      "execution_count": 3,
@@ -64,7 +70,10 @@
     }
    ],
    "source": [
-    "'''Q3. Key factors affecting students' performance in exams include socioeconomic status, parental education, study habits, attendance, and psychological well-being. Analyzing these factors involves statistical techniques like regression analysis, correlation studies, and hypothesis testing. Identifying patterns and relationships can help in understanding and improving educational outcomes by targeting influential factors.\n",
+    "#Q3\n",
+    "'''Key factors affecting students' performance in exams include socioeconomic status, parental education, study habits, attendance, and psychological \n",
+    "well-being. Analyzing these factors involves statistical techniques like regression analysis, correlation studies, and hypothesis testing. Identifying \n",
+    "patterns and relationships can help in understanding and improving educational outcomes by targeting influential factors.\n",
     "\n",
     "'''"
    ]
@@ -72,13 +81,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "2e451125-ff7e-42ef-bba6-fa00db7a2006",
+   "id": "947fad89-58d6-4aa9-b16d-9cf632e5062c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Q4. Feature engineering in the student performance dataset involves selecting relevant variables such as study time, parental education, and attendance, and transforming them to enhance model performance. This process might include normalization, encoding categorical variables, and creating new features from existing ones. Techniques like correlation analysis and feature importance from models can help in selecting the most predictive variables.\\n'"
+       "'Feature engineering in the student performance dataset involves selecting relevant variables such as study time, parental education, and attendance,\\nand transforming them to enhance model performance. This process might include normalization, encoding categorical variables, and creating new features\\nfrom existing ones. Techniques like correlation analysis and feature importance from models can help in selecting the most predictive variables.\\n'"
       ]
      },
      "execution_count": 4,
@@ -87,7 +96,10 @@
     }
    ],
    "source": [
-    "'''Q4. Feature engineering in the student performance dataset involves selecting relevant variables such as study time, parental education, and attendance, and transforming them to enhance model performance. This process might include normalization, encoding categorical variables, and creating new features from existing ones. Techniques like correlation analysis and feature importance from models can help in selecting the most predictive variables.\n",
+    "#Q4\n",
+    "'''Feature engineering in the student performance dataset involves selecting relevant variables such as study time, parental education, and attendance,\n",
+    "and transforming them to enhance model performance. This process might include normalization, encoding categorical variables, and creating new features\n",
+    "from existing ones. Techniques like correlation analysis and feature importance from models can help in selecting the most predictive variables.\n",
     "'''"
    ]
   },
@@ -100,7 +112,7 @@
     {
      "data": {
       "text/plain": [
-       "'\\nQ5. Loading the wine quality dataset and performing EDA involves examining distributions, summary statistics, and visualizations. Features like residual sugar and alcohol may exhibit non-normality. Transformations such as logarithmic, square root, or Box-Cox can be applied to these features to improve normality, facilitating better model performance and statistical analysis.\\n'"
+       "'\\nLoading the wine quality dataset and performing EDA involves examining distributions, summary statistics, and visualizations. Features like residual \\nsugar and alcohol may exhibit non-normality. Transformations such as logarithmic, square root, or Box-Cox can be applied to these features to improve\\nnormality, facilitating better model performance and statistical analysis.\\n'"
       ]
      },
      "execution_count": 5,
@@ -109,8 +121,11 @@
     }
    ],
    "source": [
+    "#Q5\n",
     "'''\n",
-    "Q5. Loading the wine quality dataset and performing EDA involves examining distributions, summary statistics, and visualizations. Features like residual sugar and alcohol may exhibit non-normality. Transformations such as logarithmic, square root, or Box-Cox can be applied to these features to improve normality, facilitating better model performance and statistical analysis.\n",
+    "Loading the wine quality dataset and performing EDA involves examining distributions, summary statistics, and visualizations. Features like residual \n",
+    "sugar and alcohol may exhibit non-normality. Transformations such as logarithmic, square root, or Box-Cox can be applied to these features to improve\n",
+    "normality, facilitating better model performance and statistical analysis.\n",
     "'''"
    ]
   },
@@ -123,7 +138,7 @@
     {
      "data": {
       "text/plain": [
-       "'\\nQ6. Performing PCA on the wine quality dataset involves standardizing the features and computing the principal components. To explain 90% of the variance, the minimum number of principal components can be determined by analyzing the cumulative explained variance ratio. Typically, a few components (often 3 to 5) can capture most of the variability, allowing for dimensionality reduction while retaining essential information.\\n'"
+       "'\\n Performing PCA on the wine quality dataset involves standardizing the features and computing the principal components. To explain 90% of the variance, \\n the minimum number of principal components can be determined by analyzing the cumulative explained variance ratio. Typically, a few components (often 3\\n to 5) can capture most of the variability, allowing for dimensionality reduction while retaining essential information.\\n'"
       ]
      },
      "execution_count": 6,
@@ -132,8 +147,11 @@
     }
    ],
    "source": [
+    "#Q6\n",
     "'''\n",
-    "Q6. Performing PCA on the wine quality dataset involves standardizing the features and computing the principal components. To explain 90% of the variance, the minimum number of principal components can be determined by analyzing the cumulative explained variance ratio. Typically, a few components (often 3 to 5) can capture most of the variability, allowing for dimensionality reduction while retaining essential information.\n",
+    " Performing PCA on the wine quality dataset involves standardizing the features and computing the principal components. To explain 90% of the variance, \n",
+    " the minimum number of principal components can be determined by analyzing the cumulative explained variance ratio. Typically, a few components (often 3\n",
+    " to 5) can capture most of the variability, allowing for dimensionality reduction while retaining essential information.\n",
     "'''"
    ]
   },
@@ -141,6 +159,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "650e5907-e1a6-4e10-8f79-4922bb1b678c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2825483b-6d64-4fa8-9ed3-2fa122d2a854",
    "metadata": {},
    "outputs": [],
    "source": []
